--- a/terraform/inventory.j2
+++ b/terraform/inventory.j2
@@ -1,9 +1,13 @@
-[all:vars]
-ansible_user=${ssh_user}
-ansible_ssh_private_key_file=${ssh_key_path}
-
-[webservers]
+[webserver]
 ${vps_ip_addr}
 
-[dbservers]
+[database]
 ${db_ip_addr}
+
+[linux:children]
+webserver
+database
+
+[linux:vars]
+ansible_user=${ssh_user}
+ansible_ssh_private_key_file=${ssh_key_path}
