add automatic ssl cert generation and renewal

--- a/ansible/roles/webserver/templates/default.conf.j2
+++ b/ansible/roles/webserver/templates/default.conf.j2
@@ -1,8 +1,13 @@
 server {
-	listen 80;
-	listen [::]:80;
+    listen 80;
+    listen [::]:80;
     server_name {{ webserver_website_url }};
     access_log /var/log/nginx/access.log;
+
+    location ~ /.well-known/acme-challenge {
+        allow all;
+        root /var/www/html;
+    }
 
     location / {
         return 301 https://{{ webserver_website_url }};
@@ -11,12 +16,12 @@ server {
 
 server {
     listen 443 ssl default_server;
-	listen [::]:443 ssl default_server;
+    listen [::]:443 ssl default_server;
     server_name {{ webserver_website_url }};
     access_log /var/log/nginx/access.log;
 
-    ssl_certificate     {{ webserver_ssl_certs_dir }}/fullchain.pem;
-    ssl_certificate_key {{ webserver_ssl_certs_dir }}/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/{{ webserver_website_url }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ webserver_website_url }}/privkey.pem;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
